--- a/hosenhosen_backend/src/main/resources/application.conf
+++ b/hosenhosen_backend/src/main/resources/application.conf
@@ -5,5 +5,5 @@ ktor {
     application {
         modules = [ ch.bbw.hosenhosen.ApplicationKt.module ]
     }
-        dbUrl = "jdbc:mysql://localhost:3306/db"
+        dbUrl = "jdbc:mysql://localhost:3306/hosenhosen_db"
 }
